--- a/docker/docker-storage.yaml
+++ b/docker/docker-storage.yaml
@@ -33,9 +33,15 @@ services:
       mc alias set minio http://minio:9000 ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD} &&
       if ! mc ls minio/mlflow-artifacts; then
         mc mb minio/mlflow-artifacts &&
-        echo 'Bucket mlflow-artifacts created'
+        echo 'Bucket mlflow-artifacts created';
       else
         echo 'Bucket mlflow-artifacts already exists';
+      fi &&
+      if ! mc ls minio/ray; then
+        mc mb minio/ray &&
+        echo 'Bucket ray created';
+      else
+        echo 'Bucket ray already exists';
       fi"
 
   postgres:
