--- a/docker/docker-compose-fastapi-onnx.yaml
+++ b/docker/docker-compose-fastapi-onnx.yaml
@@ -1,7 +1,7 @@
 services:
   fastapi_server:
     build:
-      context: ./fastApi                # needs to be changed
+      context: ./fastApi_onnx                # needs to be changed
       dockerfile: Dockerfile
     container_name: fastapi_server
     deploy:
