--- a/docker/docker-compose-fastapi-onnx-gpu.yaml
+++ b/docker/docker-compose-fastapi-onnx-gpu.yaml
@@ -4,13 +4,13 @@ services:
       context: ../fastAPI_onnx                # needs to be changed
       dockerfile: DockerFile
     container_name: fastapi_server
-#    deploy:
-#      resources:
-#        reservations:
-#            devices:
-#              - driver: nvidia
-#                count: all
-#                capabilities: [gpu]
+    deploy:
+      resources:
+        reservations:
+            devices:
+              - driver: nvidia
+                count: all
+                capabilities: [gpu]
     ports:
       - "8000:8000"
 #    volumes:
