--- a/docker/docker-compose-ray-cuda-req.yaml
+++ b/docker/docker-compose-ray-cuda-req.yaml
@@ -35,7 +35,7 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
-    entrypoint: >
+    entrypoint: |
       /bin/sh -c "
       while [ ! -f /tmp/ray/session_latest/metrics/grafana/grafana.ini ]; do
         echo 'Waiting for Grafana config files...'
