--- a/docker/docker-compose-block.yaml
+++ b/docker/docker-compose-block.yaml
@@ -30,14 +30,12 @@ services:
       /bin/sh -c "
       mc alias set minio http://minio:9000 ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD} &&
       if ! mc ls minio/mlflow-artifacts; then
-        mc mb minio/mlflow-artifacts &&
-        echo 'Bucket mlflow-artifacts created';
+        mc mb minio/mlflow-artifacts && echo 'Bucket mlflow-artifacts created';
       else
         echo 'Bucket mlflow-artifacts already exists';
       fi;
       if ! mc ls minio/ray; then
-        mc mb minio/ray &&
-        echo 'Bucket ray created';
+        mc mb minio/ray && echo 'Bucket ray created';
       else
         echo 'Bucket ray already exists';
       fi
@@ -69,8 +67,8 @@ services:
       MLFLOW_S3_ENDPOINT_URL: http://minio:9000
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-      AWS_S3_MULTIPART_THRESHOLD: "52428800"   # 50 MB
-      AWS_S3_MULTIPART_CHUNKSIZE:   "10485760" # 10 MB
+      AWS_S3_MULTIPART_THRESHOLD: "52428800"
+      AWS_S3_MULTIPART_CHUNKSIZE:   "10485760"
     ports:
       - "8000:8000"
     command: >
