--- a/jupyterServing/requirements.txt
+++ b/jupyterServing/requirements.txt
@@ -21,6 +21,9 @@ fastapi
 uvicorn
 pillow
 prometheus-fastapi-instrumentator
+boto3
+lightning
+
 
 # CPU-only PyTorch (matching your updated version)
 --extra-index-url https://download.pytorch.org/whl/cpu
