--- a/continuousX/ansible/argocd/argocd_add_canary.yml
+++ b/continuousX/ansible/argocd/argocd_add_canary.yml
@@ -31,8 +31,8 @@
       set_fact:
         external_ip: "{{ ansible_all_ipv4_addresses | select('match', '^10\\.56\\..*') | list | first }}"
 
-    - name: Create gourmetgram-canary namespace if missing
-      command: kubectl create namespace gourmetgram-canary
+    - name: Create chexpert-canary namespace if missing
+      command: kubectl create namespace chexpert-canary
       register: ns_create
       failed_when: ns_create.rc != 0 and "AlreadyExists" not in ns_create.stderr
       changed_when: "'created' in ns_create.stdout"
