--- a/docker/docker-mlflow-update.yaml
+++ b/docker/docker-mlflow-update.yaml
@@ -80,7 +80,8 @@ services:
         pip install psycopg2-binary boto3 && \
         exec mlflow server \
           --backend-store-uri postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres/${POSTGRES_DB} \
-          --default-artifact-root s3://mlflow-artifacts/ \
+          --artifacts-destination s3://mlflow-artifacts/ \
+          --serve-artifacts
           --host 0.0.0.0 --port 8000 \
           --gunicorn-opts="--timeout 600 --workers 2 --worker-tmp-dir /tmp"
     command: []
