--- a/docker/docker-compose-prometheus4.yaml
+++ b/docker/docker-compose-prometheus4.yaml
@@ -26,16 +26,16 @@ services:
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
 
-#  grafana:
-#    image: grafana/grafana:latest
-#    container_name: grafana
-#    ports:
-#      - "3000:3000"
-#    depends_on:
-#      - prometheus
-#    environment:
-#      - GF_SECURITY_ADMIN_USER=admin
-#      - GF_SECURITY_ADMIN_PASSWORD=admin
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
 
   grafana_chexpert:
     image: grafana/grafana:latest
@@ -45,10 +45,11 @@ services:
     depends_on:
       - prometheus
     volumes:
-      - ../grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-      - ../grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-      - ../grafana/provisioning/dashboards.yaml:/etc/grafana/provisioning/dashboards.yaml
-      - ../grafana/provisioning/alerting:/etc/grafana/provisioning/alerting
+       - ../grafana/provisioning:/etc/grafana/provisioning
+#      - ../grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+#      - ../grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+#      - ../grafana/provisioning/dashboards.yaml:/etc/grafana/provisioning/dashboards.yaml
+#      - ../grafana/provisioning/alerting:/etc/grafana/provisioning/alerting
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
