--- a/docker/prometheus.yml
+++ b/docker/prometheus.yml
@@ -5,3 +5,7 @@ scrape_configs:
   - job_name: 'CheXpert'
     static_configs:
       - targets: ['fastapi_server:8000']
+
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets: [ 'cadvisor:8080' ]
