--- a/docker/docker-compose-prometheus6.yaml
+++ b/docker/docker-compose-prometheus6.yaml
@@ -68,7 +68,7 @@ services:
     volumes:
       - /home/cc/workspace:/home/jovyan/work
       - type: bind
-        source: /mnt/object
+        source: /mnt/object2
         target: /mnt/dataset
         read_only: true
     command: bash -c "pip install alibi-detect numpy requests matplotlib && start-notebook.sh"
